<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcr"
    tools:context=".activity_home">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:background="#CC0016B5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/userProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/cont"
        android:onClick="profileView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/ei"
        tools:ignore="UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/cont"
        android:onClick="groupView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintStart_toEndOf="@+id/userProfile"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/gi"
        tools:ignore="UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/cont"
        android:onClick="newPost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/cont"
        android:onClick="notificationView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton11"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@android:drawable/ic_popup_reminder"
        tools:ignore="UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cont"
        android:onClick="showAbout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@android:drawable/ic_dialog_info"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="#80BEBEBE"
        android:text="@string/user0001"
        android:textColor="#FFFFFF"
        android:textColorHint="#F4F4F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#FF006F"
        android:contentDescription="@string/cont"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/ei" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/reply"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#F4F4F4"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/imageView5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:text="@string/disagree"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />

</androidx.constraintlayout.widget.ConstraintLayout>